Fix z-index bug

--- a/src/styles/toolbar.less
+++ b/src/styles/toolbar.less
@@ -118,7 +118,6 @@
 }
 
 .toolbar-tab-list {
-	// min-height: 100%;
 	.buttons-ctn {
 		padding:0;
 		margin:0;
@@ -127,7 +126,7 @@
 		min-height: 100%;
 		position: absolute;
 		top:0; left:0; right:0;
-		z-index: 1;
+		z-index: 10;
 		transform: translateX(100%);
 
 		.toolbar-module {
